# wop-workbooks

./: README.md  deque.ipynb  gdp.ipynb  matplotlib.ipynb  numpy.ipynb  pandas.ipynb  polars.ipynb  pyproject.toml  seaborn.ipynb
assets/: data.xlsx  output.csv  output.json  output.parquet  process-data.csv  website.json
